# simp

./: Cargo.toml  README.md  markdown_reader_writer_spec.md
.cursor/plans/: rust_iced_markdown_app_a5c33762.plan.md
.github/workflows/: build-release.yml
src/: app.rs  main.rs  message.rs  persist.rs  window_icon.rs
src/fs/: create.rs  load.rs  mod.rs  paths.rs  save.rs  scan.rs  watch.rs
src/state/: content_mode.rs  dialogs.rs  document.rs  hover.rs  mod.rs  selection.rs  settings.rs  status.rs  tree.rs
src/ui/: content.rs  dialogs.rs  hover_help.rs  markdown_preview_viewer.rs  menu.rs  mod.rs  settings_content.rs  settings_sidebar.rs  sidebar.rs  statusbar.rs  theme.rs  toolbar.rs
