[package]
name = "markdown_view"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Local Markdown reader/writer with Iced"

[dependencies]
iced = { version = "0.14", features = ["markdown", "highlighter", "tokio"] }
rfd = "0.15"
notify = "8"
walkdir = "2"
anyhow = "1"
tokio = { version = "1", features = ["sync", "fs", "rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iced_fonts = { version = "0.3.0", features = ["lucide"] }
resvg = { version = "0.47", default-features = false }
